# SquadOfFive

./: .env.2.template  .env.local.template  .env.template  .gitignore  Cargo.toml  Client.py  README.md  Server.py  SquadOfFive.py  client.py  compile.bat  docker-compose.yml  game.py  gameClient.py  gameLogics.py  gameServer.py  graphicTestPlaceholder.py  graphics.py  logics.py  main.py  network.py  networking.py  rebuild.sh  server.py  test.py  update.sh
backend/: .dockerignore  Cargo.toml  Dockerfile  go.mod  go.sum  postman.json  rebuild.sh  run.sh
backend/src/: authorization.rs  database.rs  error.rs  filters.rs  game_logic.rs  handlers.rs  main.go  main.rs  rejection.rs  response.rs  routes.rs  utils.rs  websocket.rs
backend/src/database/: default_image.rs  game_user.rs  player.rs  postgres.go  room.rs
backend/src/db/: mongodb.go
backend/src/enpoints/: delete_user.go  get_login_non_steam.go  get_login_steam.go  get_login_steam_process.go  get_status.go  put_cards.go  put_login_register.go
backend/src/filters/: game.rs  login.rs  rejection.rs  room.rs  signing.rs  utils.rs
backend/src/game/: play.rs
backend/src/game/play/: card.rs
backend/src/game/play/card/: value.rs
backend/src/game_logic/: play.rs
backend/src/game_logic/play/: card.rs  value.rs
backend/src/game_logic/play/card/: color.rs  value.rs
backend/src/handlers/: authorization.rs  game.rs  login.rs  room.rs  signing.rs  user.rs
backend/src/utils/: authenticate.go  error.rs  layers.rs
backend/src/websocket/: message.rs
frontend/: .dockerignore  Dockerfile  lighttpd.conf  package-lock.json  package.json  rebuild.sh  run.sh  tsconfig.json
old/: logics.py  network.py  (+1 more)
(+65 files in other folders)
