[package]
name = "backend"
version = "0.0.1"
edition = "2021"

[dependencies]
warp = "0.3.3"
deadpool-postgres = "0.10.5"
tokio-postgres = "0.7.2"
tokio = { version = "1", features = ["full"] }
serde = "1.0.152"
serde_derive = "1.0.152"
http = "0.2.8"
async-trait = "0.1.64"
jwt = "0.16.0"
sha2 = "0.10.6"
hmac = "0.12.1"
pwhash = "1"
