[package]
name = "backend"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1.64"
deadpool-postgres = "0.10.5"
futures = "0.3.26"
hmac = "0.12.1"
http = "0.2.8"
jwt = "0.16.0"
pwhash = "1"
rand = "0.8.5"
serde = "1.0.152"
serde_derive = "1.0.152"
sha2 = "0.10.6"
serde_json = { version = "1.0.93", features = ["std"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.2"
tokio-stream = "0.1.12"
ulid = { version = "1", features = ["serde"] }
warp = { version = "0.3.3", features = ["websocket"] }
